# bifrost_sp_ecoli

./: .dockerignore  .gitmodules  Dockerfile  README.md  cmd_test.py  environment.yml  install.sh  setup.cfg  setup.py
.github/workflows/: bifrost_sp_ecoli_workflow.yml  ecoli_fbi_workflow.yml
bifrost_sp_ecoli/: DI.py  Dependencies.py  GeneFilter.yaml  __main__.py  config.yaml  datadump.py  ecolityping_filter.py  launcher.py  pipeline.smk  rule__ecolityping.py
test/: test_simple.py
tests/: test_simple.py
